[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/weapons/_BaseProjectile.gd" type="Script" id=1]

[sub_resource type="Animation" id=4]
resource_name = "blast"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.470588, 0.443137, 0.407843, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.9
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.9
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 10.0
scale_random = 0.9
color_ramp = SubResource( 2 )

[node name="Projectile" type="Area2D"]
script = ExtResource( 1 )

[node name="Blast" type="Polygon2D" parent="."]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Blast"]
anims/blast = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape" type="CollisionShape2D" parent="."]

[node name="RangeTimer" type="Timer" parent="."]
one_shot = true

[node name="RemoveTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="OnHitParticles" type="Particles2D" parent="."]
emitting = false
amount = 10
lifetime = 0.3
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="timeout" from="RangeTimer" to="." method="_on_RangeTimer_timeout"]
[connection signal="timeout" from="RemoveTimer" to="." method="_on_RemoveTimer_timeout"]
